flowc/tests/fixtures/lex_separator_invalid.flow
flow f(int) -> int {
  1__0
}
